# offeryn

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/offeryn-core/: Cargo.toml
crates/offeryn-core/src/: error.rs  lib.rs
crates/offeryn-core/src/server/: mod.rs
crates/offeryn-core/src/transport/: mod.rs  sse.rs  stdio.rs
crates/offeryn-core/tests/: server_tests.rs
crates/offeryn-derive/: Cargo.toml
crates/offeryn-derive/src/: lib.rs
crates/offeryn-derive/tests/schema/: 01-basic.rs  02-doc-comments.rs  03-stateful.rs
crates/offeryn-types/: Cargo.toml
crates/offeryn-types/src/: lib.rs
examples/: calculator.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs
examples/stdio-calculator/: Cargo.toml
examples/stdio-calculator/src/: main.rs
mcp-derive/: Cargo.toml
mcp-derive/src/: lib.rs
mcp-derive/tests/: schema.rs
mcp-derive/tests/schema/: 01-basic.rs  02-doc-comments.rs  03-stateful.rs
mcp-types/: Cargo.toml
mcp-types/src/: lib.rs
src/: error.rs  lib.rs  tool.rs  types.rs
src/server/: mod.rs
src/transport/: mod.rs  sse.rs  stdio.rs
tests/: server_tests.rs
