[package]
name = "mcp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
async-stream = "0.3"
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mcp-derive = { path = "./mcp-derive" }
hyper = { version = "0.14", features = ["client", "http1"] }
schemars = "0.8"
mcp-types = { path = "./mcp-types" }
jsonrpc-core = "18.0"

[workspace]
members = [
    "mcp-derive",
    "mcp-types",
    "examples/calculator",
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
