[package]
name = "offeryn"
version = "0.1.0"
edition = "2021"
description = "An ergonomic Rust toolkit for Model Context Protocol implementations"

[dependencies]
offeryn-core = { path = "crates/offeryn-core" }
offeryn-derive = { path = "crates/offeryn-derive" }
offeryn-types = { path = "crates/offeryn-types" }
schemars = "0.8"

[workspace]
members = [
    "crates/offeryn-core",
    "crates/offeryn-derive",
    "crates/offeryn-types",
    "examples/calculator",
    "examples/stdio-calculator",
]
