[package]
name = "mcp-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
async-trait = "0.1"
mcp-types = { path = "../mcp-types" }

[dev-dependencies]
trybuild = "1.0"
tokio = { version = "1.0", features = ["full"] }
