[package]
name = "stdio-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-rs = { path = "../.." }
mcp-derive = { path = "../../mcp-derive" }
mcp-types = { path = "../../mcp-types" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
serde_json = "1.0"
schemars = "0.8" 